<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_weather_condition">WeatherCondition</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="minimum_temperature">Minimum temperature</string>
    <string name="maximum_temperature">Maximum temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="wind">Wind</string>
    <string name="description">Description</string>
</resources>
